# image-saliency-ranking-based-on-superpixels

./: .gitignore  README.md  environment.yaml  evaluate.py  infer.py  pyproject.toml  requirements.txt
configs/: comparison.yaml  default.yaml  improved.yaml
experiments/: README.md  compare.py  quick_eval.py  run_full_experiment.py  run_full_experiment.py.bak  train_improved_quick.py
scripts/: download_datasets.py  make_dummy_data.py  prepare_datasets.py
src/: comparison.py  data.py  dss_baseline.py  evaluate.py  experiment_utils.py  flops_counter.py  infer.py  model.py  model_ultra_efficient.py  superpixel.py  train.py  train_improved.py  utils.py
